WMDP-196: Add WIC clinic to eligibility API + CSV generation
